<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dip"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFFAFA"
        android:text="@string/normal_entry_dialog_tv_title"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@color/first_entry_dialog_editTextBackground"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal_entry_dialog_tv_pwd"
            android:textColor="#ff000000" />

        <EditText
            android:id="@+id/normal_entry_dialog_et_rePwd"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/normal_entry_dialog_btn_confirm"
                android:layout_width="140dip"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:background="@drawable/button_selected"
                android:text="@string/button_confirm" />

            <Button
                android:id="@+id/normal_entry_dialog_btn_cancel"
                android:layout_width="140dip"
                android:layout_height="40dip"
                android:layout_marginLeft="5dip"
                android:background="@drawable/button_selected"
                android:text="@string/button_cancel" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>